--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,9 @@
   "require": {
     "ext-mysqli": "*",
     "ext-curl": "*",
+    "ext-pdo": "*",
     "nikic/fast-route": "^1.3",
-    "robmorgan/phinx": "^0.12.10"
+    "robmorgan/phinx": "^0.12.10",
   },
   "autoload": {
     "psr-4": {
