--- a/docker/DB/Dockerfile
+++ b/docker/DB/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:latest
-ENV MYSQL_DATABASE carRoute
+ENV MYSQL_DATABASE carParking
 COPY init.sql /docker-entrypoint-initdb.d/
 EXPOSE 3306
