Fixed class use cases, added phpmyadmin to docker, updated user seed to be in line with recommended security values

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,10 @@ services :
       - MYSQL_ROOT_PASSWORD=root
     volumes:
       - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+  phpmyadmin:
+    image : phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      - PMA_ARBITRARY=1
