--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "ext-pdo": "*",
     "nikic/fast-route": "^1.3",
     "robmorgan/phinx": "^0.12.10",
+    "twbs/bootstrap": "4.0.0"
   },
   "autoload": {
     "psr-4": {
