--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -3,15 +3,13 @@ server {
     server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /Mapon-prakse-backend-projekts/public;
+    root /Kvalifikacijas-darbs;
 	try_files $uri $uri/ /public/index.php;
-	#root /Mapon-prakse-backend-projekts;
 	location / {
-		#root /Mapon-prakse-backend-projekts/public;
-		try_files $uri $uri/ /public/index.php;
-
+		#try_files $uri $uri/ /public/index.php;
+        try_files $uri /public/index.php;
 		location ~ \.php$ {
-			try_files $uri =404;
+			try_files $uri /public/index.php =404;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_pass php:9000;
 			fastcgi_index index.php;
@@ -20,34 +18,34 @@ server {
 			fastcgi_param PATH_INFO $fastcgi_path_info;
 		}
 	}
-	location /app {
-		try_files $uri $uri/ /public/index.php;
-		root /Mapon-prakse-backend-projekts;
-
-		location ~ \.php$ {
-			try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass php:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param PATH_INFO $fastcgi_path_info;
-		}
-	}
-	location /public {
-		root /Mapon-prakse-backend-projekts;
-		try_files $uri $uri/ /public/index.php;
-
-		location ~ \.php$ {
-			try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass php:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param PATH_INFO $fastcgi_path_info;
-		}
-	}
+	#location /app {
+	#	try_files $uri $uri/ /public/index.php;
+	#	root /Kvalifikacijas-darbs;
+#
+	#	location ~ \.php$ {
+	#		try_files $uri =404;
+	#		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+	#		fastcgi_pass php:9000;
+	#		fastcgi_index index.php;
+	#		include fastcgi_params;
+	#		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	#		fastcgi_param PATH_INFO $fastcgi_path_info;
+	#	}
+	#}
+	#location /public {
+	#	root /kvalifikacijas_darbs;
+	#	try_files $uri $uri/ /public/index.php;
+#
+	#	location ~ \.php$ {
+	#		try_files $uri =404;
+	#		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+	#		fastcgi_pass php:9000;
+	#		fastcgi_index index.php;
+	#		include fastcgi_params;
+	#		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	#		fastcgi_param PATH_INFO $fastcgi_path_info;
+	#	}
+	#}
 	location ~ /\.ht {
         deny all;
     }
